--- a/package.json
+++ b/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "CypherX Baileys",
-  "version": "1.4.5",
-  "description": "WhatsApp API by Tylor",
+  "name": "@whiskeysockets/baileys",
+  "version": "1.5.0",
+  "description": "WhatsApp API",
   "keywords": [
-    "Baileys",
-    "whiskeysockets/baileys",
-    "whatsapp",
-    "meta",
-    "Fizzxy", 
     "whatsapp",
     "js-whatsapp",
     "whatsapp-api",
     "whatsapp-web",
-    "whatsapp-chat",
-    "whatsapp-group",
-    "automation",
-    "multi-device", 
-    "modder"
+    "multi-device",
+    "newsletter",
+    "whatsapp-bot"
   ],
-  "homepage": "https://tentang-fizzxy.netlify.app",
+  "homepage": "https://github.com/LT-SYAII/Bail",
   "repository": {
-    "url": ""
+    "url": "git+ssh://git@github.com/LT-SYAII/Bail.git"
   },
   "license": "MIT",
   "author": "Adhiraj Singh",
@@ -53,16 +46,17 @@
     "@hapi/boom": "^9.1.3",
     "async-lock": "^1.4.1",
     "audio-decode": "^2.1.3",
-    "axios": "^1.3.3",
+    "axios": "^1.6.0",
     "cache-manager": "4.0.1",
     "futoin-hkdf": "^1.5.1",
     "libphonenumber-js": "^1.10.20",
-    "libsignal": "github:adiwajshing/libsignal-node",
+    "libsignal": "github:nstar-y/libsignal",
+    "lodash": "^4.17.21",
     "music-metadata": "^7.12.3",
     "node-cache": "^5.1.2",
     "pino": "^7.0.0",
-    "protobufjs": "^7.2.4",
-    "uuid": "^9.0.0",
+    "protobufjs": "^6.11.3",
+    "uuid": "^10.0.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
@@ -75,23 +69,23 @@
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.0.0",
     "jest": "^27.0.6",
-    "jimp": "^0.16.1",
-    "link-preview-js": "^3.0.0",
+    "jimp": "^0.16.13",
+    "json": "^11.0.0",
+    "link-preview-js": "^3.0.5",
     "open": "^8.4.2",
     "qrcode-terminal": "^0.12.0",
     "release-it": "^15.10.3",
-    "sharp": "^0.30.5",
+    "sharp": "^0.32.6",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.24.7",
-    "typescript": "^4.6.4",
-    "json": "^11.0.0"
+    "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "jimp": "^0.16.1",
+    "jimp": "^0.16.13",
     "link-preview-js": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
-    "sharp": "^0.32.2"
+    "sharp": "^0.32.6"
   },
   "peerDependenciesMeta": {
     "jimp": {
