--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "@whiskeysockets/baileys",
-  "version": "1.6.5",
+  "name": "baileys",
+  "version": "6.7.16",
   "description": "WhatsApp API",
   "keywords": [
     "whatsapp",
     "js-whatsapp",
     "whatsapp-api",
     "whatsapp-web",
-    "multi-device",
-    "newsletter",
-    "whatsapp-bot"
+    "whatsapp-chat",
+    "whatsapp-group",
+    "automation",
+    "multi-device"
   ],
-  "homepage": "https://github.com/Dark-Xploit/Baileys",
+  "homepage": "https://github.com/WhiskeySockets/Baileys",
   "repository": {
-    "url": "git+ssh://git@github.com/Dark-Xploit/Baileys.git"
+    "url": "git@github.com:WhiskeySockets/Baileys.git"
   },
   "license": "MIT",
   "author": "Adhiraj Singh",
@@ -32,10 +33,9 @@
     "changelog:preview": "conventional-changelog -p angular -u",
     "changelog:update": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "example": "node --inspect -r ts-node/register Example/example.ts",
-    "example:mobile": "node --inspect -r ts-node/register Example/example.ts --mobile",
     "gen:protobuf": "sh WAProto/GenerateStatics.sh",
-    "lint": "eslint src --ext .js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint src --fix --ext .js,.ts,.jsx,.tsx",
+    "lint": "eslint src --ext .js,.ts",
+    "lint:fix": "yarn lint --fix",
     "prepack": "tsc",
     "prepare": "tsc",
     "release": "release-it",
@@ -44,23 +44,22 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^9.1.3",
+    "@whiskeysockets/eslint-config": "github:whiskeysockets/eslint-config",
     "async-lock": "^1.4.1",
     "audio-decode": "^2.1.3",
     "axios": "^1.6.0",
-    "cache-manager": "4.0.1",
-    "futoin-hkdf": "^1.5.1",
+    "cache-manager": "^5.7.6",
     "libphonenumber-js": "^1.10.20",
-    "libsignal": "github:nstar-y/libsignal",
+    "libsignal": "github:WhiskeySockets/libsignal-node",
     "lodash": "^4.17.21",
     "music-metadata": "^7.12.3",
-    "node-cache": "^5.1.2",
-    "pino": "^7.0.0",
-    "protobufjs": "^6.11.3",
+    "@cacheable/node-cache": "^1.4.0",
+    "pino": "^9.6",
+    "protobufjs": "^7.2.4",
     "uuid": "^10.0.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@adiwajshing/eslint-config": "github:adiwajshing/eslint-config",
     "@types/got": "^9.6.11",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.0.0",
@@ -69,9 +68,9 @@
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.0.0",
     "jest": "^27.0.6",
-    "jimp": "^0.16.13",
+    "jimp": "^0.16.1",
     "json": "^11.0.0",
-    "link-preview-js": "^3.0.5",
+    "link-preview-js": "^3.0.0",
     "open": "^8.4.2",
     "qrcode-terminal": "^0.12.0",
     "release-it": "^15.10.3",
@@ -82,7 +81,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "jimp": "^0.16.13",
+    "jimp": "^0.16.1",
     "link-preview-js": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.32.6"
