--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baileys",
-  "version": "6.7.161",
+  "version": "1.8.5",
   "description": "WhatsApp API",
   "keywords": [
     "whatsapp",
@@ -19,10 +19,10 @@
   "license": "MIT",
   "author": "Adhiraj Singh",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "files": [
     "lib/*",
-    "WAProto/*",
+    "WAProto/*.ts",
+    "WAProto/*.js",
     "WASignalGroup/*.js"
   ],
   "scripts": {
@@ -48,12 +48,11 @@
     "async-lock": "^1.4.1",
     "audio-decode": "^2.1.3",
     "axios": "^1.6.0",
-    "cache-manager": "^5.7.6",
+    "cache-manager": "^6.4.2",
     "libphonenumber-js": "^1.10.20",
     "libsignal": "github:WhiskeySockets/libsignal-node",
-    "lodash": "^4.17.21",
     "music-metadata": "^7.12.3",
-    "@cacheable/node-cache": "^1.4.0",
+    "node-cache": "^5.1.2",
     "pino": "^9.6",
     "protobufjs": "^7.2.4",
     "uuid": "^10.0.0",
